[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Globals/Tooltip.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/OpenSans-64.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.75 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/Fonts/OpenSans-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_perf_hide"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("PnlTooltip:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PnlTooltip:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PnlTooltip:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PnlTooltip:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("PnlTooltip:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PnlTooltip:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_anim_set_pos"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PnlTooltip:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PnlTooltip:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="ToolTip" type="CanvasLayer"]
layer = 5
script = ExtResource( 1 )

[node name="PnlTooltip" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 510.0
margin_bottom = 250.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="LblTitle" type="Label" parent="PnlTooltip"]
anchor_right = 1.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "Tooltip Title"
align = 1
valign = 1
clip_text = true

[node name="LblDesc" type="RichTextLabel" parent="PnlTooltip"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 38.0
margin_bottom = -6.0
custom_fonts/mono_font = ExtResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
bbcode_enabled = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/BeginHide = SubResource( 4 )
anims/DoHide = SubResource( 5 )
anims/HideNow = SubResource( 6 )
anims/Show = SubResource( 7 )
anims/ShowNow = SubResource( 8 )
[connection signal="mouse_entered" from="PnlTooltip" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PnlTooltip" to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PnlTooltip/LblDesc" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PnlTooltip/LblDesc" to="." method="_on_mouse_exited"]
